Added Travis building files.

--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,19 @@ modules/gateways/callback/*
 !modules/gateways/cgp_idealqr.php
 !modules/gateways/cgp_klarna.php
 !modules/gateways/cgp_mistercash.php
+!modules/gateways/cgp_onlineueberweisen.php
 !modules/gateways/cgp_paypal.php
 !modules/gateways/cgp_paysafecard.php
 !modules/gateways/cgp_paysafecash.php
 !modules/gateways/cgp_przelewy24.php
 !modules/gateways/cgp_sofortbanking.php
 !modules/gateways/cgp_generic.php
+!tests/
+!tests/bootstrap.php
+!tests/phpunit.xml
+!README.md
+!README_DE.md
+!README_NL.md
+!composer.json
+!.travis.yml
+!phpunit.xml.dist
